--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body style = "background-color: #B20D0D;">
 
 <h1 style="font-size: 45px;">Andrea Sanchez</h1>
-<p><img src="me.jpg" width="500" height = "400"></p>
+<p><img src="me.JPG" width="500" height="400"></p>
         
 <p> I am from the Bronx, New York, born on May 2nd 2001
 <br> I am a Policy Studies major and an Information Management and Technology minor
